# WUST-CHONGSHI-2021

./: README.md
完整功能包/: README.md
完整功能包/mrobot_teleop/: CMakeLists.txt  package.xml
完整功能包/mrobot_teleop/scripts/: mrobot_teleop.py  velocity_publisher_wing_blue.py
完整功能包/my_roborts_camera/: CMakeLists.txt  package.xml
完整功能包/my_roborts_camera/src/: armor_classes.py
完整功能包/my_roborts_camera/src/utils/: torch_utils.py
完整功能包/roborts_base/src/: gimbal.cpp
完整功能包/roborts_bringup/launch/: DL.launch  WUST.launch  base.launch  mapping.launch  roborts.launch  roborts_change.launch  rplidar.launch  static_tf.launch
完整功能包/roborts_bringup/maps/: 2021map.pgm  2021map.yaml
完整功能包/roborts_costmap/config/: inflation_layer_config.prototxt
完整功能包/roborts_decision/: Blue_1.cpp  Blue_2.cpp  CMakeLists.txt  ROBORT_TEST.cpp  Red_1.cpp  Red_2.cpp
完整功能包/roborts_decision/blackboard/: blackboard.h
完整功能包/roborts_decision/config/: blue_master.prototxt  blue_wing.prototxt  decision.prototxt  red_master.prototxt  red_wing.prototxt
完整功能包/roborts_decision/example_behavior/: F1_behavior.h  F2_behavior.h  F3_behavior.h  F4_behavior.h  F5_behavior.h  F6_behavior.h  back_boot_area_behavior.h  observe_behavior.h  patrol_behavior.h  ready_behavior.h  search_behavior.h  shoot_behavior.h  swing_behavior.h  wait_behavior.h
完整功能包/roborts_decision/proto/: decision.proto
完整功能包/roborts_detection/armor_detection/: CMakeLists.txt  armor_detection_client.cpp  armor_detection_node.cpp
完整功能包/roborts_detection/armor_detection/config/: armor_detection.prototxt
完整功能包/roborts_detection/armor_detection/constraint_set/config/: constraint_set.prototxt
完整功能包/roborts_detection/armor_detection/yolo_bridge/: yolo_bridge.cpp  yolo_bridge.h
完整功能包/roborts_detection/armor_detection/yolo_bridge/config/: yolo_bridge.prototxt
完整功能包/roborts_localization/amcl/config/: amcl.yaml
完整功能包/roborts_localization/config/: localization.yaml
完整功能包/roborts_msgs/: CMakeLists.txt
完整功能包/roborts_msgs/msg/: armor_detecte_result.msg
完整功能包/roborts_planning/global_planner/config/: global_planner_config.prototxt
完整功能包/roborts_planning/local_planner/timed_elastic_band/config/: timed_elastic_band.prototxt
完整功能包/roborts_shoot/: CMakeLists.txt  package.xml  shoot_client.cpp  shoot_client.h
视觉部分/: README.md
视觉部分/my_roborts_camera/src/: armor_classes.py
视觉部分/my_roborts_camera/src/models/: common.py
视觉部分/roborts_detection/armor_detection/: armor_detection_algorithms.h  armor_detection_client.cpp  armor_detection_node.cpp  gimbal_control.cpp  kalman.h
视觉部分/roborts_detection/armor_detection/config/: armor_detection.prototxt
视觉部分/roborts_detection/armor_detection/yolo_bridge/: CMakeLists.txt  yolo_bridge.cpp  yolo_bridge.h
视觉部分/roborts_detection/armor_detection/yolo_bridge/config/: yolo_bridge.prototxt
视觉部分/yolo_inference/: CMakeLists.txt  package.xml
视觉部分/yolo_inference/src/: yolo_inference_node.cpp
